[ISSUE-41] Upgrade JBoss Class File Writer to 1.3.0.Final for JBoss Invocation to work on JDK12 and above.